# recipellm

./: .gitignore  .gitmodules  README.md  docker-compose.yml  env.example
mcp/: Dockerfile  README.md  letta_agent.py  letta_mcp.py  main.py  mealie_client.py  mealie_mcp.py  my_client.py  pyproject.toml
mcp/mealie-mcp-server/: README.md  pyproject.toml
mcp/mealie-mcp-server/src/: prompts.py  server.py
mcp/mealie-mcp-server/src/tools/: mealplan_tools.py  recipe_tools.py
mcp/scripts/: create_recipe_from_arguments.py  get_recipe_in_mealie.py  read_mealplans.py  update_recipe_categories.py  update_recipe_tags.py
