[project]
name = "recipellm-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "python-dotenv",
    "letta-client>=0.1.207",
    "structlog",
    "httpx",
    "requests",
    "python-ntfy>=0.6.1",
    "parsedatetime>=2.6",
    "tavily-python>=0.7.10",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
    "pytest>=8.3.5",
    "pytest-mock>=3.14"
]


[tool.ruff]
# https://docs.astral.sh/ruff/linter/#rule-selection
lint.select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    #"B",  # flake8-bugbear
    #"SIM", # flake8-simplify
]
line-length = 250

# To automatically remove unused imports when fixing
fix = true

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
python_version = "3.12"
# https://mypy.readthedocs.io/en/stable/existing_code.html
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
